--- a/index.html
+++ b/index.html
@@ -3,41 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Profile</title>
+    <title>Get in Touch</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-
-
-    </style>
 </head>
 <body>
-    <header>
-        <section class="title">
-            <nav>
-                <a target="_blank" href="https://png.pngtree.com/png-vector/20240901/ourmid/pngtree-3d-hazrat-abbas-calligraphy-with-decorative-flourishes-on-transparent-background-png-image_13709406.png"><img class="image" src="https://png.pngtree.com/png-vector/20240901/ourmid/pngtree-3d-hazrat-abbas-calligraphy-with-decorative-flourishes-on-transparent-background-png-image_13709406.png" alt="Logo"></a>
-                <ul>
-                    <li><a class="link" href="index.html">Home</a></li>
-                    <li><a class="link" href="Services/services.html">Services</a></li>
-                    <li><a href="Projects/projects.html" class="link">Projects</a></li>
-                    <li><a href="About me/AboutMe.html" class="link">About Me</a></li>
-                    <a href="Get in touch with gmail connection\index.html" class="contact"><button>Contact Me</button></a>
-                </ul>
-            </nav>
-        </section>
-    </header>
-    <main>
-        <section>
-           
-            <div><h2>
-                I am <span>Muhammad Abbas</span>
-            </h2></div>
-            <h3>Currently Studying in QAU Islamabad</h3>
-            <p><i>This is The Assignment of <b><span>ICT</span></b></p>
-            <p class="last">To Make Two Web Pages and Connect them with links</i></p>
-        </section>
-    </main>
-    <footer>
-        <p>Made by Muhammad Abbas &#9829</p>
-    </footer>
+    <div class="contact-container">
+        <form form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
+            <div class="contact-left-title">
+                <h2>Get in Touch</h2>
+                <hr>
+            </div>
+            <input type="hidden" name="access_key" value="2f8aa5b1-0471-4ecc-be31-c277903f954f">
+            <input type="text" name="name" placeholder="Your Name" class="contact-input">
+            <input type="email" name="email" placeholder="Your Email" class="contact-input">
+            <textarea name="message" placeholder="Your Message" class="contact-input"></textarea>
+            <button class="submit">Submit <img src="assets/arrow_icon.png" alt=""></button>
+            <button type="reset" class="submit">Reset <img src="assets/arrow_icon.png" alt=""></button>
+        </form>
+        <div class="contact-right">
+            <img src="assets/right_img.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
