--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <input type="text" name="name" placeholder="Your Name" class="contact-input">
             <input type="email" name="email" placeholder="Your Email" class="contact-input">
             <textarea name="message" placeholder="Your Message" class="contact-input"></textarea>
-            <button class="submit">Submit <img src="assets/arrow_icon.png" alt=""></button>
+            <button class="submit">Submit <img src="arrow_icon.png" alt=""></button>
             <button type="reset" class="submit">Reset <img src="assets/arrow_icon.png" alt=""></button>
         </form>
         <div class="contact-right">
-            <img src="assets/right_img.png" alt="">
+            <img src="right_img.png" alt="">
         </div>
     </div>
 </body>
